# fhirstarter

./: .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE.md  README.md  dynamic_root_definition_example.py  dynamic_route_definition_example.py  example_implementation.py  logging.py  pyproject.toml  renovate.json5
.github/: dependabot.yml
.github/workflows/: lint.yml  publish.yml  test.yml  tests.yml
fhirstarter/: __init__.py  code_templates.py  errors.py  exceptions.py  fhirstarter.py  function_templates.py  functions.py  interactions.py  json_patch.py  openapi.py  provider.py  providers.py  resources.py  routes.py  search_parameters.py  testclient.py  tests.py  utils.py
fhirstarter/examples/: config.toml  example.py
fhirstarter/fhir/R4/: resources.json
fhirstarter/fhir/R4B/: resources.json
fhirstarter/fhir/R5/: resources.json
fhirstarter/fhir/STU3/: resources.json
fhirstarter/fhir/scripts/: download_examples.py
fhirstarter/fhir/sequences/R5/: resources.json
fhirstarter/fhir/utils/: __init__.py  download_examples.py
fhirstarter/fhir_specification/: __init__.py  utils.py
fhirstarter/fhir_specification/examples/: substancesourcematerial-example.json
fhirstarter/fhir_specification/scripts/: create_sequence_data.py  download_specification_files.py
fhirstarter/fhir_specification/sequences/: __init__.py
fhirstarter/fhir_specification/sequences/R4/: extra-search-parameters.json  resources.json
fhirstarter/fhir_specification/sequences/R4B/: extra-search-parameters.json  resources.json
fhirstarter/fhir_specification/sequences/R5/: extra-search-parameters.json
fhirstarter/fhir_specification/sequences/STU3/: extra-search-parameters.json  resources.json
fhirstarter/fhir_specification_new/scripts/: download_specification_files.py
fhirstarter/scripts/: config.toml  example.py  example_implementation.py  generate_search_function_templates.py  generate_search_type_function_templates.py
fhirstarter/search_parameters/: __init__.py  search-parameters.json  search_parameters.py
fhirstarter/tests/: config.py  conftest.py  fixtures.py  openapi_schema.py  resources.py  test_capability_statement.py  test_dependencies.py  test_errors.py  test_interactions.py  test_openapi.py  test_utils.py  utils.py
src/: __init__.py  app.py  config.py  lifetime.py
src/adapters/: eventpublisher.py  mongoadapter.py  redisadpater.py
src/domain/: commands.py  events.py  queries.py
src/fhirstarter/: __init__.py  fhirstarter.py  functions.py  interactions.py  providers.py  search_parameters.py  testclient.py  utils.py
src/fhirstarter/fhir_specification/: __init__.py
src/fhirstarter/tests/: config.py  test_dependencies.py  test_errors.py  test_interactions.py  utils.py
src/interface/: abstract_unityofwork.py  abstractpublisher.py  abstractrepository.py
src/service_layer/: handler.py  messageBus.py  unityofwork.py
