[project]
name = "fhirstarter"
version = "3.0.0"
description = "An ASGI FHIR API framework built on top of FastAPI and FHIR Resources"
readme = "README.md"
requires-python = ">=3.8,<3.14"
license = "MIT"
license-files = ["LICENSE.md"]
authors = [{ name = "Christopher Sande", email = "christopher.sande@canvasmedical.com" }]
maintainers = [{ name = "Canvas Medical Engineering", email = "engineering@canvasmedical.com" }]
keywords = ["fhir", "api", "server", "resources", "framework", "fastapi", "healthcare", "hl7"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed"
]
dependencies = [
    "asyncache>=0.3.1,<0.4",
    "cachetools>=5.5.1,<6",
    "eval-type-backport>=0.2.2,<0.3",
    "fastapi>=0.103.1,<0.117.0",
    "fhir.resources[xml]>=8.0.0,<9.0.0",
    "httpx>=0.24.1,<0.29.0",
    "orjson>=3.10.3,<4",
    "python-multipart>=0.0.6,<0.0.21",
    "tomli>=2.0.1,<3.0.0 ; python_version < '3.11'",
    "tzdata>=2023.3,<2026.0 ; platform_system == 'Windows'",
]

[project.urls]
Homepage = "https://github.com/canvas-medical/fhirstarter"
Documentation = "https://github.com/canvas-medical/fhirstarter"
Repository = "https://github.com/canvas-medical/fhirstarter"

[dependency-groups]
dev = [
    "black>=23.7,<25.0",
    "beautifulsoup4>=4.12.2,<5",
    "funcy>=2.0,<3",
    "isort>=5.12.0,<6",
    "jsonpatch>=1.33,<2",
    "mypy>=1.5.1,<2",
    "pytest>=7.4,<9.0",
    "requests>=2.31.0,<3",
    "setuptools>=75.3.2,<76",
    "types-cachetools>=5.5.0.20240820,<6",
    "types-requests>=2.31.0.2,<3",
    "uvicorn[standard]>=0.23.2,<0.30.0 ; platform_system != 'Windows'",
    "uvicorn>=0.23.2,<0.30.0 ; platform_system == 'Windows'",
    "uvloop>=0.19.0,<1.0.0 ; python_version >= '3.12' and platform_system != 'Windows'",
]

[build-system]
requires = ["uv_build>=0.5.0,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""

[tool.mypy]
check_untyped_defs = true
color_output = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = false
disallow_untyped_defs = true
error_summary = true
follow_imports = "skip"
ignore_missing_imports = true
no_implicit_optional = true
pretty = true
show_error_context = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = false
warn_unreachable = true
warn_unused_ignores = true
follow_imports_for_stubs = true
