[project]
name = "fhirstarter"
version = "3.0.0"
description = "An ASGI FHIR API framework built on top of FastAPI and FHIR Resources"
readme = "README.md"
requires-python = ">=3.8,<3.14"
license = "MIT"
license-files = ["LICENSE.md"]
authors = [{ name = "Christopher Sande", email = "christopher.sande@canvasmedical.com" }]
maintainers = [{ name = "Canvas Medical Engineering", email = "engineering@canvasmedical.com" }]
keywords = ["fhir", "api", "server", "resources", "framework", "fastapi", "healthcare", "hl7"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed"
]
dependencies = [
    "asyncache>=0.3.1,<0.4",
    "cachetools>=5.5.1,<6",
    "eval-type-backport>=0.2.2,<0.3",
    "fastapi>=0.103.1,<0.117.0",
    "fhir.resources[xml]>=8.0.0,<9.0.0",
    "httpx>=0.24.1,<0.29.0",
    "orjson>=3.10.3,<4",
    "python-multipart>=0.0.6,<0.0.21",
    "tomli>=2.0.1,<3.0.0 ; python_version < '3.11'",
    "tzdata>=2023.3,<2026.0 ; platform_system == 'Windows'",
]

[project.urls]
Homepage = "https://github.com/canvas-medical/fhirstarter"
Documentation = "https://github.com/canvas-medical/fhirstarter"
Repository = "https://github.com/canvas-medical/fhirstarter"

[dependency-groups]
dev = [
    "beautifulsoup4>=4.12.2,<5",
    "funcy>=2.0,<3",
    "jsonpatch>=1.33,<2",
    "pytest>=7.4,<9.0",
    "requests>=2.31.0,<3",
    "ruff>=0.15.12,<0.16",
    "setuptools>=75.3.2,<76",
    "ty>=0.0.1a16",
    "types-cachetools>=5.5.0.20240820,<6",
    "types-requests>=2.31.0.2,<3",
    "uvicorn[standard]>=0.23.2,<0.30.0 ; platform_system != 'Windows'",
    "uvicorn>=0.23.2,<0.30.0 ; platform_system == 'Windows'",
    "uvloop>=0.19.0,<1.0.0 ; python_version >= '3.12' and platform_system != 'Windows'",
]

[build-system]
requires = ["uv_build>=0.5.0,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""

[tool.ruff]
line-length = 88
target-version = "py38"
extend-exclude = ["fhirstarter/fhir_specification/sequences"]

[tool.ruff.lint]
select = [
    "E", "F", "W",
    "I",
    "B",
    "UP",
    "SIM",
    "C4",
    "N",
    "RUF",
    "PERF",
    "TRY",
    "ANN",
]
ignore = [
    "ANN401",
    "TRY003",
    "TRY300",
]

[tool.ruff.lint.per-file-ignores]
# Tests use FastAPI's Depends()/HTTPBearer() defaults intentionally.
"fhirstarter/tests/**" = ["ANN", "N802", "B008", "PERF"]
"fhirstarter/examples/**" = ["ANN", "TRY", "PERF"]
# Generated/scraping script bundles giant URL literals.
"fhirstarter/fhir_specification/scripts/**" = ["ANN", "TRY", "PERF", "E501"]
"fhirstarter/functions.py" = ["B008"]

[tool.ruff.lint.isort]
known-first-party = ["fhirstarter"]

[tool.ruff.lint.pycodestyle]
# Allow a small overflow above `line-length` so the formatter's soft limit
# (which doesn't always reach 88) doesn't trigger E501 on every long string.
max-line-length = 100

[tool.ruff.format]

[tool.ty.environment]
python-version = "3.8"

[tool.ty.src]
include = ["fhirstarter"]
exclude = ["fhirstarter/fhir_specification/sequences"]

[tool.ty.rules]
redundant-cast = "warn"
unused-ignore-comment = "warn"

# ty (beta) reports many false positives on the framework's dynamic patterns:
#   - FHIR Resource construction via `**{...}` kwarg expansion
#   - Dynamic type hints derived from `interaction.resource_type`
#   - The decorator/wrapper pattern in functions.py / fhirstarter.py
# Silence the affected rules only in the files where those patterns live so
# new code in fresh files still gets full ty enforcement. Promote rules back
# to default (error) per file as the false-positive sources clear up.
[[tool.ty.overrides]]
include = [
    "fhirstarter/utils.py",
    "fhirstarter/functions.py",
    "fhirstarter/fhirstarter.py",
    "fhirstarter/openapi.py",
    "fhirstarter/json_patch.py",
    "fhirstarter/exceptions.py",
    "fhirstarter/providers.py",
    "fhirstarter/search_parameters.py",
    "fhirstarter/fhir_specification/utils.py",
    "fhirstarter/fhir_specification/scripts/**",
]

[tool.ty.overrides.rules]
invalid-argument-type = "ignore"
invalid-return-type = "ignore"
invalid-await = "ignore"
invalid-type-form = "ignore"
unresolved-attribute = "ignore"
not-iterable = "ignore"
no-matching-overload = "ignore"
unresolved-import = "ignore"
unsupported-base = "ignore"
possibly-missing-submodule = "ignore"

[[tool.ty.overrides]]
include = ["fhirstarter/tests/**", "fhirstarter/examples/**"]

[tool.ty.overrides.rules]
possibly-unresolved-reference = "ignore"
invalid-argument-type = "ignore"
invalid-return-type = "ignore"
not-iterable = "ignore"
unresolved-attribute = "ignore"
unsupported-base = "ignore"
redundant-cast = "ignore"
